@@ -2215,8 +2215,19 @@ PKL_PHASE_END_HANDLER
 
 PKL_PHASE_BEGIN_HANDLER (pkl_gen_ps_isa)
 {
+  pkl_ast_node isa = PKL_PASS_NODE;
+  pkl_ast_node isa_type = PKL_AST_ISA_TYPE (isa);
+
+  if (PKL_AST_TYPE_CODE (isa_type) == PKL_TYPE_ARRAY
+      && PKL_AST_TYPE_A_BOUNDER (isa_type) == PVM_NULL)
+    {
+      PKL_GEN_PUSH_SET_CONTEXT (PKL_GEN_CTX_IN_ARRAY_BOUNDER);
+      PKL_PASS_SUBPASS (isa_type);
+      PKL_GEN_POP_CONTEXT;
+    }
+
   PKL_GEN_PUSH_SET_CONTEXT (PKL_GEN_CTX_IN_TYPE);
-  PKL_PASS_SUBPASS (PKL_AST_ISA_TYPE (PKL_PASS_NODE));
+  PKL_PASS_SUBPASS (isa_type);
   PKL_GEN_POP_CONTEXT;
 
   pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_ISA);
@@ -2254,6 +2265,14 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_pr_cast)
   if (PKL_AST_TYPE_CODE (from_type) == PKL_TYPE_ANY)
     {
       pvm_program_label label = pkl_asm_fresh_label (PKL_GEN_ASM);
+
+      if (PKL_AST_TYPE_CODE (to_type) == PKL_TYPE_ARRAY
+          && PKL_AST_TYPE_A_BOUNDER (to_type) == PVM_NULL)
+        {
+          PKL_GEN_PUSH_SET_CONTEXT (PKL_GEN_CTX_IN_ARRAY_BOUNDER);
+          PKL_PASS_SUBPASS (to_type);
+          PKL_GEN_POP_CONTEXT;
+        }
 
       PKL_GEN_PUSH_SET_CONTEXT (PKL_GEN_CTX_IN_TYPE);
       PKL_PASS_SUBPASS (to_type);
@@ -3441,12 +3460,8 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_pr_type_array)
       pvm_val array_bounder = PKL_AST_TYPE_A_BOUNDER (array_type);
 
       PKL_PASS_SUBPASS (etype);
-      if (array_bounder == PVM_NULL)
-        {
-          printf ("MEEC\n");
-          pkl_ast_print (stdout, PKL_PASS_PARENT);
-        }
-      //      assert (array_bounder != PVM_NULL);
+
+      assert (array_bounder != PVM_NULL);
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_PUSH, array_bounder);
       pkl_asm_insn (PKL_GEN_ASM, PKL_INSN_MKTYA);
       PKL_PASS_BREAK;
